--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.364.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.2",
