--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
